# hn

./: .gitignore  .jscpd.json  .justfile  CLAUDE.md  Cargo.toml  PLAN_AGENT_TUI_TESTING.md  README.md  ROADMAP.md  clippy.toml  mise.toml
.claude/skills/harness/: SKILL.md
scripts/: harness-cleanup  harness-cmd  harness-start  harness-stop
src/: app.rs  cli.rs  comment_tree.rs  event.rs  help.rs  keys.rs  logging.rs  main.rs  settings.rs  test_utils.rs  time.rs  tui.rs
src/api/: client.rs  error.rs  mod.rs  types.rs
src/storage/: db.rs  migrations.rs  mod.rs  queries.rs  types.rs
src/storage/sql/: 002_normalize_feeds.sql  003_feeds_synthetic_id.sql  004_feeds_age_view.sql  005_favorites.sql  006_feed_sort.sql
src/theme/: builtin.rs  detect.rs  loader.rs  mod.rs
src/views/: comments.rs  common.rs  debug.rs  help_overlay.rs  html.rs  mod.rs  spinner.rs  status_bar.rs  stories.rs  tests.rs  theme_picker.rs  tree.rs
src/views/snapshots/: hn__views__comments__tests__comments_view_collapsed_children_show_text.snap  hn__views__comments__tests__comments_view_depth_indentation.snap  hn__views__comments__tests__comments_view_fills_viewport_with_partial_comments.snap  hn__views__comments__tests__comments_view_renders_thread.snap  hn__views__comments__tests__comments_view_top_level_collapsed_no_connectors.snap  hn__views__comments__tests__comments_view_with_timestamp.snap  hn__views__comments__tests__standard_list_for_comparison.snap  hn__views__comments__tests__text_wrap_collapsed.snap  hn__views__comments__tests__text_wrap_expanded.snap  hn__views__help_overlay__tests__help_overlay_comments.snap  hn__views__help_overlay__tests__help_overlay_stories.snap  hn__views__stories__tests__stories_view_empty_list.snap  hn__views__stories__tests__stories_view_read_stories.snap  hn__views__stories__tests__stories_view_renders_list.snap  hn__views__stories__tests__stories_view_selection_highlight.snap  hn__views__stories__tests__stories_view_with_fresh_timestamp.snap  hn__views__stories__tests__stories_view_with_stale_timestamp.snap  hn__views__theme_picker__tests__theme_picker_renders.snap  hn__views__theme_picker__tests__theme_picker_selection.snap  lima_hn__views__comments__tests__comments_view_depth_indentation.snap  lima_hn__views__comments__tests__comments_view_renders_thread.snap  lima_hn__views__stories__tests__stories_view_renders_list.snap  lima_hn__views__stories__tests__stories_view_selection_highlight.snap
src/widgets/: comment_list.rs  mod.rs
tools/metrics/: Cargo.toml
tools/metrics/src/: main.rs
