[package]
name = "lima-hn"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
chrono = "0.4"
html-escape = "0.2"
futures = "0.3"
tokio-util = "0.7"
anyhow = "1"
textwrap = "0.16"

[dev-dependencies]
tokio-test = "0.4"
